force-app/main/default/objects/Test_Run__c/Test_Run__c.object-meta.xml
<CustomObject>
    <label>Test Run</label>
    <nameField>
        <label>Test Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Runs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>