force-app/main/default/objects/Test_Run__c/fields/After_Delete__c.field-meta.xml
<CustomField>
    <fullName>After_Delete__c</fullName>
    <inlineHelpText>Enter the name of the sObject you want to have this action execute on during the after delete context</inlineHelpText>
    <label>After Delete</label>
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
    <relationshipLabel>After Delete</relationshipLabel>
    <relationshipName>After_Delete_Actions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>